2012-07-25  Christos Zoulas <christos@zoulas.com>

	* bug fixes for lustre rhost parsing

2012-06-27  Christos Zoulas <christos@zoulas.com>

	* Disable 1/2-baked sun map support to avoid SIGSEGV

2012-06-16  Christos Zoulas <christos@zoulas.com>

	*******************************************************************
	*** Released am-utils-6.2-rc1					***
	*******************************************************************

	* Fix libtool.m4 to work with later versions of autoconf.
	* In buildall, use eval so that quoted strings work
	* Centralize nfs version checking function, and introduce
	  new configuration variable nfs_vers_ping, which is the
	  max version we ping for. This is not documented yet, because
	  there might be a better way separate the max version we can
	  use vs the max version we ping for.

2012-06-09  Christos Zoulas <christos@zoulas.com>

	* fix issue with parsing nfsv4 security option strings

2012-05-01  Christos Zoulas <christos@zoulas.com>

	* Handle EPERM return from v4 file handles
	  in old linux kernels

2012-03-09  Christos Zoulas <christos@zoulas.com>

	* fix linux autofs detection
	* fix wrong types in new amq mount xdr processing

2012-01-25  Christos Zoulas <christos@zoulas.com>

	* FreeBSD portability fixes

2012-01-23  Christos Zoulas <christos@zoulas.com>

	* Avoid type punned warnings

2011-12-29  Christos Zoulas <christos@zoulas.com>

	* fix bug I introduced in get_nfs_version that caused it to return 0
	* add direct support for ext{2,3,4}

2011-12-15  Christos Zoulas <christos@zoulas.com>

	* Include <linux/fs.h> on linux, to grab extra mount flags
	* Add support for lustre

2011-11-28  Christos Zoulas <christos@zoulas.com>

	* For nfsl mounts, match against either the short local
	  host name or the fqdn name.

2011-10-06  Christos Zoulas <christos@zoulas.com>

	* Add NFSv4 support (loosely based on Ramya's code).
	  Currently if the NFSv4 mount fails with ENOENT we fail
	  back to NFSv3, unless -DNO_FALLBACK.